Add handlebar templates for display of character and quest data

--- a/index.html
+++ b/index.html
@@ -27,23 +27,11 @@
     <div class="collapse navbar-collapse" id="nav-links">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#" class="nav-links" id="get-user-uploads-link" data-target="#sign-up-form">Get My Files</a>
-        </li>
-        <li>
-          <a href="#" class="nav-links" id="get-uploads-link" data-target="#sign-up-form">Get All Files</a>
-        </li>
-        <li>
           <a href="#" class="nav-links" id="sign-up-link" data-toggle="modal" data-target="#sign-up-form">Sign Up</a>
         </li>
 
         <li>
           <a href="#" class="nav-links" id="sign-in-link" data-toggle="modal" data-target="#sign-in-form">Sign In</a>
-        </li>
-        <li>
-          <a href="#" class="nav-links" id="file-upload-link" data-toggle="modal" data-target="#file-upload-modal">File Upload</a>
-        </li>
-        <li>
-          <a href="#" class="nav-links" id="file-upload-all-link" data-toggle="modal" data-target="#file-upload-all-modal">File Upload</a>
         </li>
         <li>
           <a href="#" class="nav-links" id="change-password-link" data-toggle="modal" data-target="#change-password-form">Change Password</a>
@@ -61,7 +49,11 @@
   </div>
 </nav>
 
-<body class="container-fluid">
+<body class="container-fluid openingPicture">
+
+<div id='characterScreenDisplay'></div>
+<div id='characterTileDisplay'></div>
+<div id='questTileDisplay'></div>
 
   <!-- Sign up modal -->
   <div class="modal fade" id="sign-up-form" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="exampleModalLabel"
