Add fight screen and starting files

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 <div id='characterScreenDisplay'></div>
 <div id='characterTileDisplay'></div>
 <div id='questTileDisplay'></div>
+<div id='MonsterTileDisplay'></div>
+<div id='characterFightDisplay'></div>
+<div id='combatUiDisplay'></div>
 
   <!-- Sign up modal -->
   <div class="modal fade" id="sign-up-form" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="exampleModalLabel"
