Add fight logic and return to screens

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 <div id='characterScreenDisplay'></div>
 <div id='characterTileDisplay'></div>
 <div id='questTileDisplay'></div>
-<div id='MonsterTileDisplay'></div>
+<div class='row'>
 <div id='characterFightDisplay'></div>
+<div id='MonsterTileDisplay'></div>
+</div>
 <div id='combatUiDisplay'></div>
 
   <!-- Sign up modal -->
