Transfer fight logic due to dependency

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <div id='characterScreenDisplay'></div>
 <div id='characterTileDisplay'></div>
 <div id='questTileDisplay'></div>
+<div id='tavernStatTileDisplay'></div>
 <div class='row'>
 <div id='characterFightDisplay'></div>
 <div id='MonsterTileDisplay'></div>
