--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Brotherhood of Monster Hunters</title>
+  <title>The Green Dragon Tavern</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">The Brotherhood of Monster Hunters</a>
+      <p class="navbar-brand" href="#">The Green Dragon Inn</p>
       <a href="#" class="navbar-brand nav-links" id="files-link">Files</a>
     </div>
     <div class="collapse navbar-collapse" id="nav-links">
@@ -49,17 +49,19 @@
   </div>
 </nav>
 
-<body class="container-fluid openingPicture">
+<body class="container-fluid openingPicture tavernPicture">
 
 <div id='characterScreenDisplay'></div>
 <div id='characterTileDisplay'></div>
 <div id='questTileDisplay'></div>
 <div id='tavernStatTileDisplay'></div>
-<div class='row'>
+<div class='row justify-content-center'>
+  <div class="container">
 <div id='characterFightDisplay'></div>
-<div id='MonsterTileDisplay'></div>
-</div>
 <div id='combatUiDisplay'></div>
+<div id='MonsterTileDisplay'></div>
+  </div>
+</div>
 
   <!-- Sign up modal -->
   <div class="modal fade" id="sign-up-form" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="exampleModalLabel"
