Add characterScreen button and README

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <p class="navbar-brand" href="#">The Green Dragon Inn</p>
+      <p class="navbar-brand" href="#">The Green Dragon Tavern</p>
       <a href="#" class="navbar-brand nav-links" id="files-link">Files</a>
     </div>
     <div class="collapse navbar-collapse" id="nav-links">
@@ -32,6 +32,9 @@
 
         <li>
           <a href="#" class="nav-links" id="sign-in-link" data-toggle="modal" data-target="#sign-in-form">Sign In</a>
+        </li>
+        <li>
+          <a href="#" class="nav-links" id="character-screen-link">Character Select</a>
         </li>
         <li>
           <a href="#" class="nav-links" id="change-password-link" data-toggle="modal" data-target="#change-password-form">Change Password</a>
